tests/typechecking/valid/if else none.ml
let x = 1 in
let y = 2 in
print_int ((if 1 < 0 then 0 else ()) + 1)
