tests/typechecking/invalid/if-exp1-else-exp2.ml
let x = 1 in 
let y = 2 in 
if(x<=y) 
then 
print_int 1 
else let x=2 in y=1
